--- a/posts.html
+++ b/posts.html
@@ -1,20 +1,11 @@
 --- 
-layout: default-post 
+layout: page
+permalink: /posts
+title: Posts
+desc: All Posts
 ---
-<section class="bg-primary">
-   <div class="container">
-      <div class="row">
-         <div class="col-lg-8 col-lg-offset-2">
-            <h2 class="section-heading">Posts</h2>
-            <hr align="left" class="light">
-            <p class="text-faded">All posts</p>
-         </div>
-      </div>
-   </div>
-</section>
-
 <section>
-   <div class="container" itemprop="articleBody">
+   <div class="container my-6" itemprop="articleBody">
       <div class="row">
          <div class="col-md-8 col-md-offset-2">
             {% for post in site.posts %} 
