--- a/_posts/2020-07-18-aws-gamelift-debug-logs.html
+++ b/_posts/2020-07-18-aws-gamelift-debug-logs.html
@@ -1,17 +1,17 @@
 ---
 layout: post-video
-title: "Unity + AWS GameLift - SDK Setup (Part 1)"
-date: 2020-06-18 00:08:00 -0500
+title: "AWS GameLift Debug Logs"
+date: 2020-07-18 00:08:00 -0500
 categories: AWS GameLift Unity
 author: BatteryAcidDev
-description: This video walks you through how to build and enable the GameLift Realtime client SDK for use in your multiplayer Unity project.
+description: This video reviews how to debug remote GameLift servers by connecting to the instances within the Fleet and viewing the logs.
 ---
 <div class="container">
    <div class="row">
       <div class="col-12">
          <div class="media-body">
             <div class="">
-               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hWmw3neX0hc" frameborder="0"
+               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8kQIG8YB4q0" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
             </div>
