Added latest video post
- added twitter and discord widgets
- updated about section

--- a/_posts/2020-08-26-unity-multiplayer-aws.html
+++ b/_posts/2020-08-26-unity-multiplayer-aws.html
@@ -2,7 +2,7 @@
 layout: post-video
 title: "Unity Multiplayer with Amazon Web Services"
 date: 2020-08-26 00:08:00 -0500
-categories: AWS GameLift Unity
+categories: AWS GameLift Unity Multiplayer
 author: BatteryAcidDev
 description: This is a Unity demo of how to roll your own basic multiplayer server using AWS Lambda, API Gateway, and DynamoDb.  The example is aimed for a two player game but can be scaled up for your project’s needs.
 ---
